--- a/.github/workflows/django_rest_framework.yml
+++ b/.github/workflows/django_rest_framework.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
-      working-directory: ./clinic
+      working-directory: ./DEV/clinic
