--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 asgiref==3.8.1
 cffi==1.16.0
 cryptography==42.0.7
@@ -6,5 +7,8 @@ django-filter==24.2
 djangorestframework==3.15.1
 Markdown==3.6
 pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
 PyJWT==2.8.0
 sqlparse==0.5.0
+typing_extensions==4.11.0
