--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 cffi==1.16.0
 cryptography==42.0.7
 Django==5.0.4
+django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
 Markdown==3.6
