--- a/DEV/clinic/requirements.txt
+++ b/DEV/clinic/requirements.txt
@@ -1,15 +1,22 @@
 annotated-types==0.6.0
 asgiref==3.8.1
+boto3==1.34.103
+botocore==1.34.103
 cffi==1.16.0
 cryptography==42.0.7
 Django==5.0.4
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
+jmespath==1.0.1
 Markdown==3.6
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
+s3transfer==0.10.1
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.11.0
+urllib3==2.2.1
