--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# AWS
+.ebextensions/
+.elasticbeanstalk/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -122,7 +126,7 @@ celerybeat.pid
 # Environments
 .venv
 env/
-venv/
+venv*/
 ENV/
 env.bak/
 venv.bak/
