wip: admin page login

--- a/DEV/clinic/Dockerfile
+++ b/DEV/clinic/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.11
 
+ENV EBS_URL=localhost
+ENV S3_BUCKET_URL=http://127.0.0.1:9090
+ENV S3_BUCKET_NAME=frontend
+
 # Copying backend files
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt &&\
