--- a/DEV/clinic/requirements.txt
+++ b/DEV/clinic/requirements.txt
@@ -8,8 +8,12 @@ Django==5.0.4
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
+iniconfig==2.0.0
 jmespath==1.0.1
 Markdown==3.6
+packaging==24.0
+pip-autoremove==0.10.0
+pluggy==1.5.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
