fix: fixes cookies authentication using jwt
test: fixes tests for jwt cookie

fix: fixes login with jwt cookie

--- a/DEV/clinic_frontend/.env
+++ b/DEV/clinic_frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = http://django-env.eba-p3m7aa6p.us-east-1.elasticbeanstalk.com/
-# REACT_APP_API_URL = http://localhost:8000/
+# REACT_APP_API_URL = http://django-env.eba-p3m7aa6p.us-east-1.elasticbeanstalk.com/
+REACT_APP_API_URL = http://localhost:8000/
