--- a/DEV/clinic/Dockerfile
+++ b/DEV/clinic/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11
 
-ENV EBS_URL=localhost
+ENV EBS_HOST=localhost
 ENV S3_BUCKET_URL=http://127.0.0.1:9090
 ENV S3_BUCKET_NAME=frontend
 
