--- a/DEV/clinic/requirements.txt
+++ b/DEV/clinic/requirements.txt
@@ -1,26 +1,40 @@
 annotated-types==0.6.0
 asgiref==3.8.1
+awsebcli==3.20.10
+blessed==1.20.0
 boto3==1.34.103
 botocore==1.34.103
+cement==2.8.2
+certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.3
 cryptography==42.0.7
 Django==5.0.4
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
+idna==3.7
 iniconfig==2.0.0
 jmespath==1.0.1
 Markdown==3.6
 packaging==24.0
+pathspec==0.10.1
 pip-autoremove==0.10.0
 pluggy==1.5.0
+psycopg2-binary==2.9.9
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+requests==2.31.0
 s3transfer==0.10.1
+semantic-version==2.8.5
 six==1.16.0
 sqlparse==0.5.0
+termcolor==1.1.0
 typing_extensions==4.11.0
 urllib3==2.2.1
+wcwidth==0.1.9
