feat: protected routes and register page

--- a/DEV/clinic_frontend/.env
+++ b/DEV/clinic_frontend/.env
@@ -1,6 +1,6 @@
 ; RAFA
 ; REACT_APP_API_URL = http://django-env.eba-p3m7aa6p.us-east-1.elasticbeanstalk.com/
 ; QUINTELA
-REACT_APP_API_URL = http://apiclinic-env.eba-tumg2awm.us-east-1.elasticbeanstalk.com/
+; REACT_APP_API_URL = http://apiclinic-env.eba-tumg2awm.us-east-1.elasticbeanstalk.com/
 ; LOCAL
-; REACT_APP_API_URL = http://localhost:8000/
+REACT_APP_API_URL = http://localhost:8000/
