--- a/.github/workflows/django_rest_framework.yml
+++ b/.github/workflows/django_rest_framework.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main", "dev" ]
 
 
+
 jobs:
   build:
 
@@ -15,6 +16,18 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.11]
+
+    services:
+      postgres:
+        image: postgres:16.3
+        env:
+          POSTGRES_DB: rds.clinic
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+          # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
