--- a/DEV/docker-compose.yml
+++ b/DEV/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8000:8000"
     depends_on:
       - backend_db
+    networks:
+      - aws
 
   backend_db:
     image: postgres:16.3
@@ -19,6 +21,8 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - 5432:5432
+    networks:
+      - aws
 
   frontend_s3:
     image: "adobe/s3mock:latest"
@@ -26,3 +30,10 @@ services:
       - initialBuckets=frontend.clinic, image.clinic
     ports:
       - "9090:9090"
+    networks:
+      aws:
+        aliases:
+          - s3
+
+networks:
+  aws:
