--- a/.github/workflows/django_rest_framework.yml
+++ b/.github/workflows/django_rest_framework.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "main", "dev" ]
 
+env:
+  AWS_ACCESS_KEY_ID: ASIA2UDZ7TAGR2R4BJFW
+  AWS_SECRET_ACCESS_KEY: 3osvMUaeiqwTx4HyQhltdMPAiO3txH7z4PNkmzgP
+  AWS_DEFAULT_REGION: us-east-1
 
 
 jobs:
@@ -41,5 +45,5 @@ jobs:
         pip install -r DEV/clinic/requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python manage.py test --verbosity 2
       working-directory: ./DEV/clinic
