--- a/DEV/clinic/requirements.txt
+++ b/DEV/clinic/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 asgiref==3.8.1
 attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 aws-sam-translator==1.89.0
 aws-xray-sdk==2.13.0
 awsebcli==3.20.10
@@ -12,16 +14,21 @@ cement==2.8.2
 certifi==2024.2.2
 cffi==1.16.0
 cfn-lint==0.87.3
+channels==4.1.0
 charset-normalizer==3.3.2
 colorama==0.4.3
+constantly==23.10.4
 cryptography==42.0.7
+daphne==4.1.2
 Django==5.0.4
 django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.15.1
 docker==7.0.0
 graphql-core==3.2.3
+hyperlink==21.0.0
 idna==3.7
+incremental==22.10.0
 iniconfig==2.0.0
 Jinja2==3.1.4
 jmespath==1.0.1
@@ -54,10 +61,13 @@ pluggy==1.5.0
 ply==3.11
 psycopg2-binary==2.9.9
 py-partiql-parser==0.5.5
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 PyJWT==2.8.0
+pyOpenSSL==24.1.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 PyYAML==6.0.1
@@ -70,13 +80,17 @@ rpds-py==0.18.1
 s3transfer==0.7.0
 sarif-om==1.0.4
 semantic-version==2.8.5
+service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
 sympy==1.12
 termcolor==1.1.0
+Twisted==24.3.0
+txaio==23.1.1
 typing_extensions==4.11.0
 urllib3==1.26.5
 wcwidth==0.1.9
 Werkzeug==3.0.3
 wrapt==1.16.0
 xmltodict==0.13.0
+zope.interface==6.4
